Implement stackOverflow error test